# towerofthedead

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  w32.cmake  w64.cmake
src/: main.c  totd-pubinfo.rc
src/dragoness/: dragonessEssentialVars.c  dragonessEssentialVars.h  dragonessFunctions.c  dragonessFunctions.h  dragonessShaderCode.c  dragonessShaderCode.h  dragonessTestModels.c  dragonessTestModels.h
src/scripts/: scriptAll.c  scriptAll.h
